[improve][test] Enable Netty leak detection in tests